unpackaged/main/default/objects/Traffic_Fine__c/Traffic_Fine__c.object-meta.xml
<CustomObject>
    <label>Traffic Fine</label>
    <nameField>
        <displayFormat>TF-{00000}</displayFormat>
        <label>Fine Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traffic Fines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>