unpackaged/main/default/objects/Traffic_Fine__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Traffic Fines</relationshipLabel>
    <relationshipName>Traffic_Fines</relationshipName>
    <type>Lookup</type>
</CustomField>