unpackaged/main/default/objects/Traffic_Fine__c/fields/Fine_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Fine_Supplier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>