unpackaged/main/default/objects/Traffic_Fine__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending with Payables Approvals</fullName>
            </value>
            <value>
                <fullName>Pending with Receivable Approvals</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending with Operation Approvals</fullName>
            </value>
            <value>
                <fullName>Receivables Approved</fullName>
            </value>
            <value>
                <fullName>Operations Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Payables Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>