unpackaged/main/default/objects/Traffic_Fine__c/fields/Ticket_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticket Date</label>
    <type>Date</type>
</CustomField>