unpackaged/main/default/objects/Traffic_Fine__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticket Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>