unpackaged/main/default/objects/Traffic_Fine__c/fields/Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Master</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Traffic Fines</relationshipLabel>
    <relationshipName>Traffic_Fines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>