unpackaged/main/default/objects/Traffic_Fine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vehicle_Master__c</columns>
    <columns>Assigned_Vehicle__c</columns>
    <columns>Fine_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Fine_Supplier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>